--- a/Image view.html
+++ b/Image view.html
@@ -21,12 +21,17 @@
 		<nav class="navbar navbar-expand-lg navbar-light bg-light">
 			<a class="navbar-brand pl-5" href="#">
 				<!-- Navbar -->
-				<img src="img/icon/icon.png" class="d-inline-block align-top" alt="" />
+				<img src="img/icon/icon.png" class="d-inline-block align-top w-75" alt="">
 			</a>
+			<!-- As a link -->
+			<div class="d-inline-block d-sm-block login-for-sm">
+			  <a class="text-white h3 " href="#">Login</a>
+			</div>
 			<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">	<span class="icon-bar"></span>
 				<span class="icon-bar"></span>
 				<span class="icon-bar"></span>
-			</button>
+			</button>			
+
 			<div class="collapse navbar-collapse" id="navbarNavDropdown">
 				<ul class="navbar-nav ml-auto">
 					<li class="nav-item  "> <a class="nav-link selected" href="#">Winning Entries</a>
@@ -37,7 +42,7 @@
 					<li class="nav-item "> <a class="nav-link" href="#">FAQs</a>
 					</li>
 					<li class="nav-item "> <a class="nav-link" href="#">Terms</a>
-						<li class="nav-item "> <a class="nav-link" href="#">LOGIN</a>
+						<li class="nav-item d-md-block"> <a class="nav-link" href="#">LOGIN</a>
 						</li>
 				</ul>
 			</div>
@@ -49,10 +54,14 @@
 		<div class="row">
 			<div class="col-md-9 text-white position-relative">
 				<h5>Images you can download and use for your collage</h5>
-				<p class="hp-h5">You can use as many images from the available images to create a collage</p>	<a class="download-count">Download (2)</a>	
+				<p class="hp-h5">You can use as many images from the available images to create a collage</p>	<a class="download-count d-md-block">EMAIL SELECTED (2)</a>
+
+			</div>
+			<div class="col-md-3 d-sm-block">
+				<a class="download-count ">EMAIL SELECTED (2)</a>
 			</div>
 			<div class="col-md-3">
-				<button type="button" class="btn btn-submit">DOWNLOAD ALL</button>
+				<button type="button" class="btn btn-submit">EMAIL ALL</button>
 			</div>
 		</div>
 		<div class="row center-border py-5 ">
@@ -173,7 +182,7 @@
 	<div class="container h-100 how-participate my-5 page-landing">
 		<div class="row h-100 justify-content-md-center align-items-center">
 			<div class="col-md-12 text-center title-text hp-h3 mt-3">HOW YOU CAN PARTICIPATE?</div>
-			<div class="col-md-12 text-center sub-title-text hp-h5 mb-3 pb-5">All you need is your recent bill for purchase of any of HP’s Products</div>
+			<div class="col-md-12 text-center sub-title-text hp-h5 mb-md-3 pb-md-5">All you need is your recent bill for purchase of any of HP’s Products</div>
 			<form class="col-12 mt-5">
 				<div class="row">
 					<div class="col-md-4">
