--- a/Winner Page.html
+++ b/Winner Page.html
@@ -21,12 +21,17 @@
 		<nav class="navbar navbar-expand-lg navbar-light bg-light">
 			<a class="navbar-brand pl-5" href="#">
 				<!-- Navbar -->
-				<img src="img/icon/icon.png" class="d-inline-block align-top" alt="" />
+				<img src="img/icon/icon.png" class="d-inline-block align-top w-75" alt="">
 			</a>
+			<!-- As a link -->
+			<div class="d-inline-block d-sm-block login-for-sm">
+			  <a class="text-white h3 " href="#">Login</a>
+			</div>
 			<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">	<span class="icon-bar"></span>
 				<span class="icon-bar"></span>
 				<span class="icon-bar"></span>
-			</button>
+			</button>			
+
 			<div class="collapse navbar-collapse" id="navbarNavDropdown">
 				<ul class="navbar-nav ml-auto">
 					<li class="nav-item  "> <a class="nav-link selected" href="#">Winning Entries</a>
@@ -37,7 +42,7 @@
 					<li class="nav-item "> <a class="nav-link" href="#">FAQs</a>
 					</li>
 					<li class="nav-item "> <a class="nav-link" href="#">Terms</a>
-						<li class="nav-item "> <a class="nav-link" href="#">LOGIN</a>
+						<li class="nav-item d-md-block"> <a class="nav-link" href="#">LOGIN</a>
 						</li>
 				</ul>
 			</div>
