--- a/collage 4.html
+++ b/collage 4.html
@@ -21,12 +21,17 @@
 		<nav class="navbar navbar-expand-lg navbar-light bg-light">
 			<a class="navbar-brand pl-5" href="#">
 				<!-- Navbar -->
-				<img src="img/icon/icon.png" class="d-inline-block align-top" alt="" />
+				<img src="img/icon/icon.png" class="d-inline-block align-top w-75" alt="">
 			</a>
+			<!-- As a link -->
+			<div class="d-inline-block d-sm-block login-for-sm">
+			  <a class="text-white h3 " href="#">Login</a>
+			</div>
 			<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">	<span class="icon-bar"></span>
 				<span class="icon-bar"></span>
 				<span class="icon-bar"></span>
-			</button>
+			</button>			
+
 			<div class="collapse navbar-collapse" id="navbarNavDropdown">
 				<ul class="navbar-nav ml-auto">
 					<li class="nav-item  "> <a class="nav-link selected" href="#">Winning Entries</a>
@@ -37,7 +42,7 @@
 					<li class="nav-item "> <a class="nav-link" href="#">FAQs</a>
 					</li>
 					<li class="nav-item "> <a class="nav-link" href="#">Terms</a>
-						<li class="nav-item "> <a class="nav-link" href="#">LOGIN</a>
+						<li class="nav-item d-md-block"> <a class="nav-link" href="#">LOGIN</a>
 						</li>
 				</ul>
 			</div>
@@ -56,7 +61,7 @@
       </h4>
 			</div>
 		</div>
-		<div class="row center-border collage-card pt-5 pb-5 ">
+		<div class="row center-border collage-card mx-4pt-5 pb-5 ">
 			<div class="col-md-6 ">
 				<img class="w-100 h-100" src="img/collage-sample.png" />
 			</div>
@@ -90,7 +95,7 @@
 	<div id="elementtoScrollToID" class="container  main-area my-5 page-landing">
 		<div class="row center-border pt-5 thanks-for-participation">
 			<div class="col-md-12 text-center title-text hp-h3 mt-3">ABOUT THE CONTEST</div>
-			<div class="col-md-12 text-center sub-title-text hp-h5 mb-3 pb-5">Making an impact towards sustainaibility</div>
+			<div class="col-md-12 text-center sub-title-text hp-h5 mb-md-3 pb-md-5">Making an impact towards sustainaibility</div>
 			<div class="col-md-12 mt-5 mb-5">
 				<div class="row">
 					<div class="col-md-5 desc px-4">
@@ -119,21 +124,21 @@
 	<div class="container  main-area my-5 page-landing">
 		<div class="row center-border thanks-for-participation">
 			<div class="col-md-12 text-center title-text hp-h3 mt-3">EXCITING PRIZES</div>
-			<div class="col-md-12 text-center sub-title-text hp-h5 mb-3 pb-5">TOP 3 ENTRIES WILL BE SELECTED BY AN EXPERT PANEL</div>
+			<div class="col-md-12 text-center sub-title-text hp-h5 mb-3 pb-md-5">TOP 3 ENTRIES WILL BE SELECTED BY AN EXPERT PANEL</div>
 			<div class="col-md-12 mt-5 mb-5">
 				<div class="row">
 					<div class="col-md-6 px-5 text-center">
 						<img class="img-fluid mb-3" src="img/space-shuttle.png">
 						<div class="hp-h4">Trip to Space Centre, USA</div>
 						<div class="hp-h5 text-hp-gray mt-3">Top 3 Winners with the best collage will get
-							<br/>a full-expense paid trip to Space Centre, USA</div>
+							<br>a full-expense paid trip to Space Centre, USA</div>
 					</div>
 					<div class="col-md-6 px-5 text-center">
-						<img class="img-fluid mb-3 " src="img/echo-dots.png">
+						<img class="img-fluid mb-3  px-5 py-4" src="img/echo-dots.png">
 						<div class="hp-h4">Trip to Space Centre, USA</div>
 						<div class="hp-h5 text-hp-gray mt-3">Every week, 100 valid collage entries will be picked
-							<br/>to receive Amazon Echo Dot. 1000 winners
-							<br/>in total will get Amazon Echo Dots. *T&C Apply</div>
+							<br>to receive Amazon Echo Dot. 1000 winners
+							<br>in total will get Amazon Echo Dots. *T&amp;C Apply</div>
 					</div>
 				</div>
 			</div>
@@ -144,7 +149,7 @@
 	<div class="container h-100 how-participate my-5 page-landing">
 		<div class="row h-100 justify-content-md-center align-items-center">
 			<div class="col-md-12 text-center title-text hp-h3 mt-3">HOW YOU CAN PARTICIPATE?</div>
-			<div class="col-md-12 text-center sub-title-text hp-h5 mb-3 pb-5">All you need is your recent bill for purchase of any of HP’s Products</div>
+			<div class="col-md-12 text-center sub-title-text hp-h5 mb-md-3 pb-md-5">All you need is your recent bill for purchase of any of HP’s Products</div>
 			<form class="col-12 mt-5">
 				<div class="row">
 					<div class="col-md-4">
