--- a/collage-2 & 3.html
+++ b/collage-2 & 3.html
@@ -18,14 +18,14 @@
 
 <body class="register-page">
 	<div class="hp-bg">
-		<nav class="navbar navbar-expand-lg navbar-light bg-light">
+		<nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
 			<a class="navbar-brand pl-5" href="#">
 				<!-- Navbar -->
 				<img src="img/icon/icon.png" class="d-inline-block align-top w-75" alt="">
 			</a>
 			<!-- As a link -->
 			<div class="d-inline-block d-sm-block login-for-sm">
-			  <a class="text-white h3 " href="#">Login</a>
+			  <a class="text-white h5 " href="#">Login</a>
 			</div>
 			<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">	<span class="icon-bar"></span>
 				<span class="icon-bar"></span>
