--- a/Image view.html
+++ b/Image view.html
@@ -18,7 +18,7 @@
 
 <body class="register-page">
 	<div class="hp-bg">
-		<nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
+		<nav class="navbar navbar-expand-lg navbar-light bg-light">
 			<a class="navbar-brand pl-5" href="#">
 				<!-- Navbar -->
 				<img src="img/icon/icon.png" class="d-inline-block align-top w-75" alt="">
