--- a/landing.html
+++ b/landing.html
@@ -54,12 +54,12 @@
 		<div class="container main-area register page-landing mt-5">			
 			<div class="row center-border pt-3 chance-to-visit pb-1">
 				<div class="col-md-6">
-					<h2 class="page-title">GET A CHANCE TO TAKE YOUR CHILD TO A U.S.
+					<h2 class="page-title f-w-800 mb-5">GET A CHANCE TO TAKE <br/>YOUR CHILD TO A U.S.<br/>
         SPACE CENTER</h2>
 					<p class="mt-4 ">Buy an Original HP Ink Cartridge and participate in “Create A Collage” contest and get a chance to visit a space center in the USA. Weekly top 100 contestants will win a amazon echo dot.</p>
-					<div class="input-group mt-3 mb-1">
+					<div class="input-group mt-5 mb-1">
 						<input type="text" class="form-control py-4" placeholder="Enter Mobile Number" aria-label="Recipient's username" aria-describedby="basic-addon2">
-						<div class="input-group-append"> <span class="input-group-text text-hp-blue" id="basic-addon2" data-toggle="modal" data-target="#getStartedModal1">GET STARTED </span>
+						<div class="input-group-append"> <span class="input-group-text text-hp-blue" id="btn-started" data-toggle="modal" data-target="#getStartedModal1">GET STARTED </span>
 						</div>
 					</div>
 					<p class="wont-spam">Here is a link to our <a href="" class="text-white">Privacy Policy</a>
