--- a/Winner Page.html
+++ b/Winner Page.html
@@ -50,14 +50,14 @@
 
 	<!--WINNER partiton -->
 	<div class="container mt-5 page-winner mb-5">
-		<div class="row center-border pt-5 chance-to-visit pb-5">
+		<div class="row center-border pt-5 chance-to-visit pb-md-5 pb-md-2">
 			<div class="col-md-4">
-				<h2>
+				<h2 class="f-w-800 mb-5">
 		          400 ECHO DOTS<br/>
 		          HAVE BEEN WON<br/>
 		          TILL NOW!
 		         </h2>
-				<p class="mt-4 ">SO WHAT ARE YOU WAITING FOR? CREATE A COLLAGE AND GRAB YOURS</p>
+				<p class="mb-5">SO WHAT ARE YOU WAITING FOR? CREATE A COLLAGE AND GRAB YOURS</p>
 				<div class="form-group">
 					<button type="submit" class="btn btn-submit">CHECK WEEKLY WINNERS</button>
 				</div>
@@ -67,10 +67,15 @@
 				<img class="img-fluid" src="img/echo-dots.png" />
 			</div>
 		</div>
+		<div class="row mx-auto next-arrow ">
+				<div class="col text-center parent">
+					<img src="img/circle-arrow.png" />
+				</div>
+			</div>
 	</div>
 	<!--end WINNER partiton -->
 	<!-- congratulate partition -->
-	<div class="container main-area register mt-5 mb-5 page-winner pt-5 winner-entries">
+	<div id="elementtoScrollToID" class="container main-area register mt-5 mb-5 page-winner pt-5 winner-entries">
 		<div class="row">
 			<div class="col-md-12 text-center congo-entries-title text-uppercase font-weight-bold"> <span>Top 100 entries for this week</span>
 			</div>
