--- a/imag view.html
+++ b/imag view.html
@@ -47,94 +47,138 @@
 				</ul>
 			</div>
 		</nav>
-		<!-- landing page ---------------------------------------------------------------------
+	
+	<!-- view page ---------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- -->
+	<!--view partiton -->
+	<div class="container register mt-5 page-collage mb-5 view1">
+		<div class="row">
+			<div class="col-md-9 text-white position-relative">
+				<h5>Images you can download and use for your collage</h5>
+				<p class="hp-h5">You can use as many images from the available images to create a collage</p>	<a class="download-count d-md-block">EMAIL SELECTED (2)</a>
+
+			</div>
+			<div class="col-md-3 d-sm-block">
+				<a class="download-count ">EMAIL SELECTED (2)</a>
+			</div>
+			<div class="col-md-3 all-col-right">
+				<button type="button" class="btn btn-submit">EMAIL ALL</button>
+			</div>
+		</div>
+		<div class="row center-border py-5 ">
+			<div class="col-md-12">
+				<div class="row ">
+					<div class="col-md-3 text-center img-card">
+						<img class="w-100" src="img/gallery1.jpg" data-toggle="modal" data-target="#lightbox">
+						<div class="hp-input-group-text">
+							<input type="checkbox" aria-label="Checkbox for following text input">
+						</div>
+					</div>
+					<div class="col-md-3 text-center img-card" data-toggle="modal" data-target="#lightbox">
+						<img class="w-100" src="img/gallery1.jpg">
+						<div class="hp-input-group-text">
+							<input type="checkbox" aria-label="Checkbox for following text input">
+						</div>
+					</div>
+					<div class="col-md-3 text-center img-card" data-toggle="modal" data-target="#lightbox">
+						<img class="w-100" src="img/gallery1.jpg">
+						<div class="hp-input-group-text">
+							<input type="checkbox" aria-label="Checkbox for following text input">
+						</div>
+					</div>
+					<div class="col-md-3 text-center img-card" data-toggle="modal" data-target="#lightbox">
+						<img class="w-100" src="img/gallery1.jpg">
+						<div class="hp-input-group-text">
+							<input type="checkbox" aria-label="Checkbox for following text input">
+						</div>
+					</div>
+				</div>
+				<div class="row mt-4">
+					<div class="col-md-3 text-center img-card" data-toggle="modal" data-target="#lightbox">
+						<img class="w-100" src="img/gallery1.jpg">
+						<div class="hp-input-group-text">
+							<input type="checkbox" aria-label="Checkbox for following text input">
+						</div>
+					</div>
+					<div class="col-md-3 text-center img-card" data-toggle="modal" data-target="#lightbox">
+						<img class="w-100" src="img/gallery1.jpg">
+						<div class="hp-input-group-text">
+							<input type="checkbox" aria-label="Checkbox for following text input">
+						</div>
+					</div>
+					<div class="col-md-3 text-center img-card" data-toggle="modal" data-target="#lightbox">
+						<img class="w-100" src="img/gallery1.jpg">
+						<div class="hp-input-group-text">
+							<input type="checkbox" aria-label="Checkbox for following text input">
+						</div>
+					</div>
+					<div class="col-md-3 text-center img-card" data-toggle="modal" data-target="#lightbox">
+						<img class="w-100" src="img/gallery1.jpg">
+						<div class="hp-input-group-text">
+							<input type="checkbox" aria-label="Checkbox for following text input">
+						</div>
+					</div>
+				</div>
+				<div class="row mt-4">
+					<div class="col-md-3 text-center img-card" data-toggle="modal" data-target="#lightbox">
+						<img class="w-100" src="img/gallery1.jpg">
+						<div class="hp-input-group-text">
+							<input type="checkbox" aria-label="Checkbox for following text input">
+						</div>
+					</div>
+					<div class="col-md-3 text-center img-card" data-toggle="modal" data-target="#lightbox">
+						<img class="w-100" src="img/gallery1.jpg">
+						<div class="hp-input-group-text">
+							<input type="checkbox" aria-label="Checkbox for following text input">
+						</div>
+					</div>
+					<div class="col-md-3 text-center img-card" data-toggle="modal" data-target="#lightbox">
+						<img class="w-100" src="img/gallery1.jpg">
+						<div class="hp-input-group-text">
+							<input type="checkbox" aria-label="Checkbox for following text input">
+						</div>
+					</div>
+					<div class="col-md-3 text-center img-card" data-toggle="modal" data-target="#lightbox">
+						<img class="w-100" src="img/gallery1.jpg">
+						<div class="hp-input-group-text">
+							<input type="checkbox" aria-label="Checkbox for following text input">
+						</div>
+					</div>
+				</div>
+				<div class="row mt-4">
+					<div class="col-md-3 text-center img-card" data-toggle="modal" data-target="#lightbox">
+						<img class="w-100" src="img/gallery1.jpg">
+						<div class="hp-input-group-text">
+							<input type="checkbox" aria-label="Checkbox for following text input">
+						</div>
+					</div>
+					<div class="col-md-3 text-center img-card" data-toggle="modal" data-target="#lightbox">
+						<img class="w-100" src="img/gallery1.jpg">
+						<div class="hp-input-group-text">
+							<input type="checkbox" aria-label="Checkbox for following text input">
+						</div>
+					</div>
+					<div class="col-md-3 text-center img-card" data-toggle="modal" data-target="#lightbox">
+						<img class="w-100" src="img/gallery1.jpg">
+						<div class="hp-input-group-text">
+							<input type="checkbox" aria-label="Checkbox for following text input">
+						</div>
+					</div>
+					<div class="col-md-3 text-center img-card" data-toggle="modal" data-target="#lightbox">
+						<img class="w-100" src="img/gallery1.jpg">
+						<div class="hp-input-group-text">
+							<input type="checkbox" aria-label="Checkbox for following text input">
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
+	</div>
+	<!--end view partiton -->
+			<!-- landing page ---------------------------------------------------------------------
   -------------------------------------------------------------------------------------
   ------------------------------------------------- !-->
-		<!--first partiton -->
-		<div class="container main-area register page-landing mt-5">			
-			<div class="row center-border pt-3 chance-to-visit pb-1">
-				<div class="col-md-6 px-5">
-					<h2 class="page-title f-w-800 mb-5">GET A CHANCE TO TAKE <br/>YOUR CHILD TO A U.S.<br/>
-        SPACE CENTER</h2>
-					<p class="mt-4 ">Buy an Original HP Ink Cartridge and participate in “Create A Collage” contest and get a chance to visit a space center in the USA. Weekly top 100 contestants will win a amazon echo dot.</p>
-					<div class="input-group mt-5 mb-1">
-						<input type="text" class="form-control py-4" placeholder="Enter Mobile Number" aria-label="Recipient's username" aria-describedby="basic-addon2">
-						<div class="input-group-append"> <span class="input-group-text text-hp-blue" id="btn-started" data-toggle="modal" data-target="#getStartedModal1">GET STARTED </span>
-						</div>
-					</div>
-					<p class="wont-spam">Here is a link to our <a href="" class="text-white">Privacy Policy</a>
-					</p>
-				</div>
-				<div class="col-md-6 px-5 top-img-col  mx-auto justify-content-md-center">
-					<img class="img-fluid" src="img/banner.png" />
-				</div>
-			</div>
-			<div class="row mx-auto next-arrow ">
-				<div class="col text-center parent">
-					<img src="img/circle-arrow.png" />
-				</div>
-			</div>
-		</div>
-	</div>
-	<!--thanks for participation partiton -->
-	<!-- second bg  -->
-	<div class="secong-bg">
-		<div id="elementtoScrollToID" class="container  main-area my-5 page-landing">
-		<div class="row center-border pt-5 thanks-for-participation">
-			<div class="col-md-12 text-center title-text hp-h3 mt-3">ABOUT THE CONTEST</div>
-			<div class="col-md-12 text-center sub-title-text hp-h5 mb-md-3 pb-md-5">Making an impact towards sustainaibility</div>
-			<div class="col-md-12 mt-5 mb-5">
-				<div class="row">
-					<div class="col-md-6 desc px-5">
-						<p>Continuing our Sustainable Impact journey, we bring to you the ‘Race to Space’ collage contest. Through this initiative, we want to hear your thoughts and see your ideas on how to fight inequality and injustice, end extreme poverty and tackle climate change – some of world’s most pressing issues!</p>
-						<br/>
-						<p>Pick one of the nine Global Goals [link to topics] linked to HP’s Sustainable Impact strategy, and compose your message on a collage. This contest is your chance to express, in the most creative ways, how we can move closer to achieving the set goals. At the same time, you stand to win amazing prizes!!!</p>
-						<br/>
-						<p>Learn About Sustainable Development Goals by visiting https://sustainabledevelopment.un.org</p>
-					</div>
-					<div class="col-md-6 px-4 mx-auto justify-content-md-center">
-						<img class="img-fluid" src="img/themes.png">
-					</div>
-				</div>
-				<div class="row">
-					<div class="col-md-12 mt-5 text-center">
-						<div class="form-group ">
-							<button type="submit" class="btn btn-submit">SEE ALL IMAGES FOR CREATING COLLAGE</button>
-						</div>
-					</div>
-				</div>
-			</div>
-		</div>
-	</div>
-	<!-- end thanks for participation partition -->
-	<!-- EXCITING PRIZES partition -->
-	<div class="container  main-area my-5 page-landing">
-		<div class="row center-border thanks-for-participation">
-			<div class="col-md-12 text-center title-text hp-h3 mt-3">EXCITING PRIZES</div>
-			<div class="col-md-12 text-center sub-title-text hp-h5 mb-3 pb-md-5">TOP 3 ENTRIES WILL BE SELECTED BY AN EXPERT PANEL</div>
-			<div class="col-md-12 mt-5 mb-5">
-				<div class="row">
-					<div class="col-md-6 px-5 text-center">
-						<img class="img-fluid mb-3" src="img/space-shuttle.png">
-						<div class="hp-h4">Trip to Space Centre, USA</div>
-						<div class="hp-h5 text-hp-gray mt-3">Top 3 Winners with the best collage will get
-							<br>a full-expense paid trip to Space Centre, USA</div>
-					</div>
-					<div class="col-md-6 px-5 text-center">
-						<img class="img-fluid mb-3  px-5 py-4" src="img/echo-dots.png">
-						<div class="hp-h4">Trip to Space Centre, USA</div>
-						<div class="hp-h5 text-hp-gray mt-3">Every week, 100 valid collage entries will be picked
-							<br>to receive Amazon Echo Dot. 1000 winners
-							<br>in total will get Amazon Echo Dots. *T&amp;C Apply</div>
-					</div>
-				</div>
-			</div>
-		</div>
-	</div>
-	<!-- end EXCITING PRIZES partition-->
+
 	<!-- how-to section -->
-	</div>
-	<!-- end second bg  -->
 	<div class="container h-100 how-participate my-5 page-landing">
 		<div class="row h-100 justify-content-md-center align-items-center">
 			<div class="col-md-12 text-center title-text hp-h3 mt-3">HOW YOU CAN PARTICIPATE?</div>
@@ -349,6 +393,45 @@
 					</div>
 				</div>
 			</div>
+			<div class="modal fade carousal-modal" id="lightbox">
+				<div class="modal-dialog modal-lg">
+					<div class="modal-content">
+						<button type="button" class="close" data-dismiss="modal"></button>
+						<div class="modal-body">
+							<div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
+								<div class="carousel-inner">
+									<div class="carousel-item active">
+										<img class="d-block" src="img/gallery1.jpg" alt="First slide">
+									</div>
+									<div class="carousel-item">
+										<img class="d-block" src="img/gallery2.jpg" alt="Second slide">
+									</div>
+									<div class="carousel-item">
+										<img class="d-block" src="img/gallery1.jpg" alt="Third slide">
+									</div>
+								</div>
+								<div class="row mx-auto mt-3">
+									<div class="col text-center">
+										<button type="submit" class="btn btn-submit">DOWNLOAD THIS IMAGE</button>
+									</div>
+								</div>
+								<a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev"> <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+									<span class="sr-only">Previous</span>
+								</a>
+								<a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next"> <span class="carousel-control-next-icon" aria-hidden="true"></span>
+									<span class="sr-only">Next</span>
+								</a>
+							</div>
+						</div>
+						<!-- /.modal-body -->
+					</div>
+					<!-- /.modal-content -->
+				</div>
+				<!-- /.modal-dialog -->
+			</div>
+			<!-- /.modal -->
+			<!-- end view page ---------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- -->
+			<!-- end Model 4 -->
 			<!-- Footer -->
 			<footer>
 				<div class="row mt-5">
