--- a/collage 4.html
+++ b/collage 4.html
@@ -92,20 +92,22 @@
 	<!--end upload success partiton -->
 	<!-- end collage4 page ---------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- -->
 
-	<div id="elementtoScrollToID" class="container  main-area my-5 page-landing">
+	<!-- second bg  -->
+	<div class="secong-bg">
+		<div id="elementtoScrollToID" class="container  main-area my-5 page-landing">
 		<div class="row center-border pt-5 thanks-for-participation">
 			<div class="col-md-12 text-center title-text hp-h3 mt-3">ABOUT THE CONTEST</div>
 			<div class="col-md-12 text-center sub-title-text hp-h5 mb-md-3 pb-md-5">Making an impact towards sustainaibility</div>
 			<div class="col-md-12 mt-5 mb-5">
 				<div class="row">
-					<div class="col-md-5 desc px-4">
+					<div class="col-md-6 desc px-5">
 						<p>Continuing our Sustainable Impact journey, we bring to you the ‘Race to Space’ collage contest. Through this initiative, we want to hear your thoughts and see your ideas on how to fight inequality and injustice, end extreme poverty and tackle climate change – some of world’s most pressing issues!</p>
 						<br/>
 						<p>Pick one of the nine Global Goals [link to topics] linked to HP’s Sustainable Impact strategy, and compose your message on a collage. This contest is your chance to express, in the most creative ways, how we can move closer to achieving the set goals. At the same time, you stand to win amazing prizes!!!</p>
 						<br/>
 						<p>Learn About Sustainable Development Goals by visiting https://sustainabledevelopment.un.org</p>
 					</div>
-					<div class="col-md-7 px-4 mx-auto justify-content-md-center">
+					<div class="col-md-6 px-4 mx-auto justify-content-md-center">
 						<img class="img-fluid" src="img/themes.png">
 					</div>
 				</div>
@@ -146,6 +148,8 @@
 	</div>
 	<!-- end EXCITING PRIZES partition-->
 	<!-- how-to section -->
+	</div>
+	<!-- end second bg  -->
 	<div class="container h-100 how-participate my-5 page-landing">
 		<div class="row h-100 justify-content-md-center align-items-center">
 			<div class="col-md-12 text-center title-text hp-h3 mt-3">HOW YOU CAN PARTICIPATE?</div>
