moderator separate html pages

--- a/moderator 1.html
+++ b/moderator 1.html
@@ -17,15 +17,13 @@
 </head>
 
 <body class="">
-		<nav class="navbar navbar-expand-lg navbar-light bg-light">
-			
-			<div class="collapse navbar-collapse" id="navbarNavDropdown">
-				<ul class="navbar-nav ml-auto text-dark">
-					<img src="img/icon/icon.png" class="d-inline-block align-top w-25 h-25" alt="">
-					<li class="nav-item  "> <a class="nav-link" href="#">Contest  <br/>Moderator Login</a>
-					</li>					
-				</ul>
-			</div>
+		<nav class="navbar navbar-expand-lg navbar-light bg-light bg-white">
+			<ul class="nav navbar-nav navbar-logo mx-auto">
+			 <img src="img/icon/blue-icon.png" class="d-inline-block blue-icon" alt="">
+		      <li class="nav-item">
+		        <a class="nav-link text-left text-dark" href="#">Contest  <br/>Moderator Login</a>
+		      </li>
+		    </ul>								
 		</nav>
 		
 		<!--first partiton -->
@@ -39,12 +37,12 @@
 							</div>
 							<div class="">
 								<div class="form-group">
-									<label for="exampleInputEmail1" >Mobile number</label>
-									<input type="text" class="form-control" id="firstname" placeholder="Enter Mobile number">
+									<label for="exampleInputEmail1" >User Name</label>
+									<input type="text" class="form-control" id="username" placeholder="Enter user name">
 								</div>
 								<div class="form-group mt-4">
-									<label for="exampleInputEmail1">Enter One Time Password</label>
-									<input type="text" class="form-control" id="firstname" placeholder="One Time Password">
+									<label for="exampleInputEmail1">Password</label>
+									<input type="text" class="form-control" id="password" placeholder="Enter Password">
 								</div>
 							</div>
 							<div class="mt-4 text-center mt-3 mb-4">
@@ -60,11 +58,11 @@
 		</div>
 	
 	<!--end first participation partiton -->
-	<section class="footer-section mt-4 py-2 px-5 bg-light">
+	<section class="footer-section footer px-5 bg-light">
 		<div class="container-fluid">
 			<!-- Footer -->
 			<footer>
-				<div class="row py-2">
+				<div class="row">
 					<div class="col-md-6"> <a href="">BigCity Promotions Pvt. Ltd.</a>
 						<a class="pl-3" href="">Privacy & Terms</a>
 						<a class="pl-3" href="">Contact Us</a>
