Update moderator 4 & 5.html

--- a/moderator 4 & 5.html
+++ b/moderator 4 & 5.html
@@ -67,7 +67,7 @@
 				<img class="w-100" src="img/gallery1.jpg"  data-toggle="modal" data-target="#lightbox">
 			</div>
 			<div class="col-md-4">
-				<p>Status: In all entries</p>
+				<p class="text-dark">Status: In all entries</p>
 				<button type="button" class="btn btn-primary mt-2">SHORTLIST THIS ENTRY</button><br/>
 				<button type="button" class="btn btn-secondary mt-2">HOLD THIS ENTRY</button><br/>
 				<button type="button" class="btn btn-success mt-2">REMOVE THIS ENTRY</button><br/>
