--- a/moderator 1.html
+++ b/moderator 1.html
@@ -14,196 +14,55 @@
 	<script src="js/bootstrap.min.js"></script>
 	<!-- <script src="js/bootstrap.min.js"></script> -->
 	<script src='https://www.google.com/recaptcha/api.js'></script>
-
 </head>
 
-<body class="mode-land2">
-		<nav class="navbar navbar-expand-lg navbar-light bg-white pr-5">
-			<ul class="nav navbar-nav navbar-logo pl-4">
-			    <img src="img/icon/blue-icon.png" class="d-inline-block blue-icon" alt="">
-		        <li class="nav-item">
-		           <a class="nav-link text-left text-dark" href="#">Contest  <br/>Moderator Login</a>
-		         </li>
-		    </ul>	
-			<!-- As a link -->
-			<div class="d-inline-block d-sm-block login-for-sm">
-			  <a class="text-white h5 " href="#">Login</a>
-			</div>
-			<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">	<span class="icon-bar"></span>
-				<span class="icon-bar"></span>
-				<span class="icon-bar"></span>
-			</button>			
-
-			<div class="collapse navbar-collapse text-dark" id="navbarNavDropdown">
-				<ul class="navbar-nav ml-auto pr-5">
-					<li class="nav-item  "> <a class="nav-link " href="#">contest ruless</a>
-					</li>
-					<li class="nav-item "> <a class="nav-link" href="#">FAQ</a>
-					</li>
-					</li>
-					<li class="nav-item "> <a class="nav-link" href="#">Documents</a>
-					</li>
-					<li class="nav-item "> <a class="nav-link color-complete" href="#">Sample rating</a>
-						<li class="nav-item d-md-block"> <a class="nav-link selected" href="#">LOGOUT</a>
-						</li>
-				</ul>
-			</div>
+<body class="">
+		<nav class="navbar navbar-expand-lg navbar-light bg-light bg-white">
+			<ul class="nav navbar-nav navbar-logo mx-auto">
+			 <img src="img/icon/blue-icon.png" class="d-inline-block blue-icon" alt="">
+		      <li class="nav-item">
+		        <a class="nav-link text-left text-dark" href="#">Contest  <br/>Moderator Login</a>
+		      </li>
+		    </ul>								
 		</nav>
 		
 		<!--first partiton -->
-
-		
-		<div class="container-fluid main-area register mode-landing-top py-5 px-5">
-
-			<p class="px-5 text-white">Click below to see respective entries</p>
-			<div class="row mx-5 count-container">
-				<div class="col-md-2 color-positive box-left-border">10,345 <br/> Total entries</div>	
-				<div class="col-md-2 color-complete">9,345 <br/> Completed entries</div>	
-				<div class="col-md-2 color-positive">345 <br/> Shortlisted entries</div>	
-				<div class="col-md-2 color-positive">345 <br/> Unopened entries</div>	
-				<div class="col-md-2 color-hold">345 <br/> On-hold entries</div>	
-				<div class="col-md-2 color-rejected box-right-border">10,345 <br/> Rejected entries</div>	
+		<div class="container-fluid main-area register mode-landing py-4">						
+			<div class="row justify-content-center">
+				<div class="col-md-4 bg-light text-dark pt-5 border-curve">
+					<form >
+						<div class="w-75 mx-auto justify-content-md-center gray-t">
+							<div class="mb-4">
+								<h6 class="font-weight-bold">Enter your credentials to login </h6>
+							</div>
+							<div class="">
+								<div class="form-group">
+									<label for="exampleInputEmail1" >User Name</label>
+									<input type="text" class="form-control" id="username" placeholder="Enter user name">
+								</div>
+								<div class="form-group mt-4">
+									<label for="exampleInputEmail1">Password</label>
+									<input type="text" class="form-control" id="password" placeholder="Enter Password">
+								</div>
+							</div>
+							<div class="mt-4 text-center mt-3 mb-4">
+								<div class="form-group">
+									<button type="submit" class="btn btn-submit w-100" data-dismiss="modal" data-toggle="modal" data-target="#getStartedModal3">Login</button>
+								</div>
+							</div>
+							<div class="error-msg mb-5">Error messages goes here</div>
+						</div>
+					</form>
+				</div>
 			</div>
 		</div>
-		<div class="container py-3 mt-3 progress-container text-dark">
-			<div class="py-3">		
-
-					<div class="row pl-5">
-						<p class="col-md-12  icon-clipboard">
-							<span class="hp-h3 color-complete">To-Do items for you: 05</span><br/>
-							<span class="hp-h4 text-dark">Review activities pending on your behalf in order of priority</span>
-						</p>
-					</div>
-
-					<div class="row top-buffer">
-						<div class="col-md-10 text-dark">
-							<p> <span class="font-weight-bold">Week 1: </span>You need to rate 245 entries from a total of 1000 entries <span class="color-p-hold hp-h5 ml-2">TODAY’S TASK</span></p>
-							<div class="progress mb-3 ">								
-							  <div class="progress-bar" role="progressbar" aria-valuenow="70"
-  								aria-valuemin="0" aria-valuemax="100" style="width:70%"></div>
-							</div>
-						</div>
-						<div class="col-md-2">
-							<button class="btn btn-primary border-curve btn-start-rate" type="submit">Start rating</button>
-						</div>
-					</div>
-
-					<div class="row top-buffer">
-						<div class="col-md-10  text-dark">
-							<p> <span class="font-weight-bold">Week 5: </span>You need to confirm 245 entries out of the shortlisted 500 entries <span class="color-p-current hp-h5 ml-2">OVERDUE</span></p>
-							<div class="progress mb-3">
-							  <div class="progress-bar" role="progressbar" aria-valuenow="70"
-  								aria-valuemin="0" aria-valuemax="100" style="width:70%"></div>
-							</div>
-						</div>
-						<div class="col-md-2">
-							<button class="btn btn-primary border-curve btn-start-rate" type="submit">Start rating</button>
-						</div>
-					</div>
-					<div class="row top-buffer">
-						<div class="col-md-10  text-dark">
-							<p> <span class="font-weight-bold">Week 4: </span>You need to rate 245 entries for amazon echo dot <span class="color-p-current hp-h5 ml-2">OVERDUE</span></p>
-							<div class="progress mb-3">
-							  <div class="progress-bar" role="progressbar" aria-valuenow="70"
-  								aria-valuemin="0" aria-valuemax="100" style="width:70%"></div>
-							</div>
-						</div>
-						<div class="col-md-2">
-							<button class="btn btn-primary border-curve btn-start-rate" type="submit">Start rating</button>
-						</div>
-					</div>
-					<div class="row top-buffer">
-						<div class="col-md-10  text-dark">
-							<p> <span class="font-weight-bold">Week 1: </span>You need to rate 245 entries for the reward of ‘Trip to the US Space Station’ <span class="color-p-current hp-h5 ml-2">OVERDUE</span></p>
-							<div class="progress mb-3">
-							  <div class="progress-bar" role="progressbar" aria-valuenow="70"
-  								aria-valuemin="0" aria-valuemax="100" style="width:70%"></div>
-							</div>
-						</div>
-						<div class="col-md-2">
-							<button class="btn btn-primary border-curve btn-start-rate" type="submit">Start rating</button>
-						</div>
-					</div>
-				</div>
-		</div>
 	
-
-	<div class="container mt-5 gift-container">
-		<div class="row pl-5">
-						<p class="col-md-12 icon-gift">
-							<span class="hp-h3 color-complete">Gift status dashboard</span><br/>
-							<span class="hp-h4 text-dark">This shows the number of winning entries, pending entries and overdue entries against each gift for each week</span>
-						</p>
-		</div>
-
-		<div class="row bg-light pt-3 pb-5 status-table">
-			<ul class="nav nav-tabs">
-			  <li class="nav-item">
-			    <a class="nav-link active" href="#">Amazon Echo Dot</a>
-			  </li>
-			  <li class="nav-item">
-			    <a class="nav-link color-complete" href="#">Trip to space station</a>
-			  </li>
-			  <li class="nav-item">
-			    <a class="nav-link color-complete" href="#">Gift D</a>
-			  </li>
-			  <li class="nav-item">
-			    <a class="nav-link color-complete" href="#">Gift E</a>
-			  </li>
-			</ul>
-			<div class="col-md-12 pt-5 pb-4 bg-white">
-				<table class="table">
-				  <thead>
-				    <tr class="table-head">
-				      <th scope="col">Week</th>
-				      <th scope="col">Total rewards</th>
-				      <th scope="col">Confirmed winners</th>
-				      <th scope="col">Pending winners</th>
-				      <th scope="col">Overdue rewards</th>
-				    </tr>
-				  </thead>
-				  <tbody>
-				    <tr>
-				      <td>Week 1 (1st Sep 2019 - 7th Sep 2019)</td>
-				      <td>100</td>
-				      <td>200</td>
-				      <td>200</td>
-				      <td>200</td>
-				    </tr>
-				    <tr>
-				      <td>Week 1 (1st Sep 2019 - 7th Sep 2019)</td>
-				      <td>100</td>
-				      <td>200</td>
-				      <td>200</td>
-				      <td>200</td>
-				    </tr>
-				    <tr>
-				      <td>Week 1 (1st Sep 2019 - 7th Sep 2019)</td>
-				      <td>100</td>
-				      <td>200</td>
-				      <td>200</td>
-				      <td>200</td>
-				    </tr>
-				    <tr>
-				      <td>Week 1 (1st Sep 2019 - 7th Sep 2019)</td>
-				      <td>100</td>
-				      <td>200</td>
-				      <td>200</td>
-				      <td>200</td>
-				    </tr>
-				  </tbody>
-				</table>
-			</div>	
-		</div>
-	</div>
-	
-
 	<!--end first participation partiton -->
-	<section class="footer-section mt-4 py-2 px-5 bg-light">
-		<div class="container">
+	<section class="footer-section footer px-5 bg-light">
+		<div class="container-fluid">
 			<!-- Footer -->
 			<footer>
-				<div class="row py-2">
+				<div class="row">
 					<div class="col-md-6"> <a href="">BigCity Promotions Pvt. Ltd.</a>
 						<a class="pl-3" href="">Privacy & Terms</a>
 						<a class="pl-3" href="">Contact Us</a>
@@ -231,8 +90,6 @@
 	<link rel="stylesheet" type="text/css" href="css/layout.css">
 	<link rel="stylesheet" type="text/css" href="css/hpStyle.css">
 	<link rel="stylesheet" type="text/css" href="css/HPmodeScript.css">
-	<!-- Font Awesome Icon Library -->
-	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </body>
 
 </html>
